--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import 'base';
 @import 'utils';
 @import '@rainbow-me/rainbowkit/styles.css';
+@import 'button.scss';
